internal team feedback - content updates

--- a/v2/find-project-city-council-summary.html
+++ b/v2/find-project-city-council-summary.html
@@ -104,7 +104,7 @@
 								Funding received to date:
 							</dt>
 							<dd class="govuk-summary-list__value">
-								45,000,000
+								£45,000,000
 							</dd>
 						</div>
 						<div class="govuk-summary-list__row">
@@ -112,12 +112,12 @@
 								Project contact:
 							</dt>
 							<dd class="govuk-summary-list__value">
-								<a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk</a>, <a class="govuk-link"
-									href="#">sally.law@lincolnshire.gov.uk</a>
+								<a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk (LUF 89232)</a> <a class="govuk-link"
+									href="#">sally.law@lincolnshire.gov.uk (LUF 89232)</a>
 							</dd>
 						</div>
 					</dl>
-					<p class="govuk-heading-s">Funded rojects</p>
+					<p class="govuk-heading-s">Funded projects</p>
 					<ul class="govuk-list govuk-list--bullet">
 						<li>
 							<a class="govuk-link" href="#">LUF 89232- Regenerate green spaces - Canterbury City Council
