--- a/v2/funded-organisation-city-council-summary.html
+++ b/v2/funded-organisation-city-council-summary.html
@@ -67,7 +67,7 @@
 					<a class="govuk-breadcrumbs__link" href="../v2/index.html">Find project information</a>
 				</li>
 				<li class="govuk-breadcrumbs__list-item">
-					<a class="govuk-breadcrumbs__link" href="../v2/funded-organisation.html">Find a funded organisation</a>
+					<a class="govuk-breadcrumbs__link" href="../v2/funded-organisation.html">Find an organisation</a>
 				</li>
 				<li class="govuk-breadcrumbs__list-item">
 					<a class="govuk-breadcrumbs__link" href="#">Organisation profile Canterbury City Council</a>
@@ -100,7 +100,7 @@
 								Funding received to date:
 							</dt>
 							<dd class="govuk-summary-list__value">
-								45,000,000
+								£45,000,000
 							</dd>
 						</div>
 						<div class="govuk-summary-list__row">
@@ -108,12 +108,12 @@
 								Project contact:
 							</dt>
 							<dd class="govuk-summary-list__value">
-								<a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk</a>, <a class="govuk-link"
-									href="#">sally.law@lincolnshire.gov.uk</a>
+								<a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk (LUF 89232)</a> <a class="govuk-link"
+									href="#">sally.law@lincolnshire.gov.uk (LUF 89232)</a>
 							</dd>
 						</div>
 					</dl>
-					<p class="govuk-heading-s">Funded rojects</p>
+					<p class="govuk-heading-s">Funded projects</p>
 					<ul class="govuk-list govuk-list--bullet">
 						<li>
 							<a class="govuk-link" href="#">LUF 89232- Regenerate green spaces - Canterbury City Council
