--- a/v2/find-project-summary.html
+++ b/v2/find-project-summary.html
@@ -95,8 +95,6 @@
 								Quarter 3 2021
 							</dd>
 						</div>
-					</dl>
-					<dl class="govuk-summary-list">
 						<div class="govuk-summary-list__row">
 							<dt class="govuk-summary-list__key">
 								Fund:
@@ -115,7 +113,7 @@
 						</div>
 						<div class="govuk-summary-list__row">
 							<dt class="govuk-summary-list__key">
-								Council:
+								Organisation:
 							</dt>
 							<dd class="govuk-summary-list__value">
 								<a class="govuk-link" href="../v2/find-project-city-council-summary.html">Canterbury City
@@ -130,8 +128,6 @@
 								8 August 2020
 							</dd>
 						</div>
-					</dl>
-					<dl class="govuk-summary-list">
 						<div class="govuk-summary-list__row">
 							<dt class="govuk-summary-list__key">
 								Funding allocated to project:
@@ -156,20 +152,14 @@
 								£17,000,000
 							</dd>
 						</div>
-					</dl>
-					<p class="govuk-body"><strong>Project aim: </strong>The project will use funding to improve existing
-						green
-						spaces and create new ones for the local area.</p>
-					<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-					<dl class="govuk-summary-list">
 						<div class="govuk-summary-list__row">
 							<dt class="govuk-summary-list__key">
-								Project outcomes:
+								Project aim:
 							</dt>
 							<dd class="govuk-summary-list__value">
-								<strong class="govuk-tag govuk-tag--grey">AIR QUALITY (N02)</strong>
-								<strong class="govuk-tag govuk-tag--grey">GREEN SPACES</strong>
-								<strong class="govuk-tag govuk-tag--grey">TREES PLANTED</strong>
+								The project will use funding to improve existing
+								green
+								spaces and create new ones for the local area.
 							</dd>
 						</div>
 						<div class="govuk-summary-list__row">
@@ -187,8 +177,8 @@
 								Project contact:
 							</dt>
 							<dd class="govuk-summary-list__value">
-								<a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk</a>, <a class="govuk-link"
-									href="#">sally.law@lincolnshire.gov.uk</a>
+								<a class="govuk-link" href="#">sara.long@lincolnshire.gov.uk (LUF 89232)</a> <a class="govuk-link"
+									href="#">sally.law@lincolnshire.gov.uk (LUF 89232)</a>
 							</dd>
 						</div>
 						<div class="govuk-summary-list__row">
