added csv dowload example

--- a/v2/__download-data.html
+++ b/v2/__download-data.html
@@ -248,7 +248,9 @@
 								Data format
 							</label>
 							<select class="govuk-select" id="data-format" name="data-format">
-								<option value="csv" selected>CSV</option>
+								<option value="CSV" selected>CSV</option>
+								<option value="JSON" selected>JSON</option>
+								<option value="XML" selected>XML</option>
 							</select>
 						</div>
 						<div class="govuk-button-group govuk-!-margin-bottom-0">
