--- a/v2/download-data.html
+++ b/v2/download-data.html
@@ -265,11 +265,13 @@
 									Data format
 								</label>
 								<select class="govuk-select" id="data-format" name="data-format">
-									<option value="csv" selected>CSV</option>
+									<option value="CSV" selected>CSV</option>
+									<option value="JSON">JSON</option>
+									<option value="XML">XML</option>
 								</select>
 							</div>
 							<div class="govuk-button-group govuk-!-margin-bottom-0">
-								<a href="#" type="submit" class="govuk-button" data-module="govuk-button">
+								<a href="../v2/example-files/fs-example-file.csv" class="govuk-button" data-module="govuk-button" download>
 									Download
 								</a>
 								<a href="#" id="preview" class="govuk-button govuk-button--secondary" data-module="govuk-button">
