--- a/v2/find-organisation-city-council-summary.html
+++ b/v2/find-organisation-city-council-summary.html
@@ -67,7 +67,7 @@
 					<a class="govuk-breadcrumbs__link" href="../v2/index.html">Find project information</a>
 				</li>
 				<li class="govuk-breadcrumbs__list-item">
-					<a class="govuk-breadcrumbs__link" href="../v2/funded-organisation.html">Find an organisation</a>
+					<a class="govuk-breadcrumbs__link" href="../v2/find-organisation.html">Find an organisation</a>
 				</li>
 				<li class="govuk-breadcrumbs__list-item">
 					<a class="govuk-breadcrumbs__link" href="#">Organisation profile Canterbury City Council</a>
