--- a/v2/find-project-summary.html
+++ b/v2/find-project-summary.html
@@ -211,13 +211,15 @@
 								Data format
 							</label>
 							<select class="govuk-select" id="file-format" name="file-format">
-								<option value="csv" selected>CSV</option>
+								<option value="CSV" selected>CSV</option>
+								<option value="JSON">JSON</option>
+								<option value="XML">XML</option>
 							</select>
 						</div>
 						<div class="govuk-button-group govuk-!-margin-bottom-0">
-							<button class="govuk-button" data-module="govuk-button">
+							<a href="../v2/example-files/fs-example-file.csv" class="govuk-button" data-module="govuk-button" download>
 								Download
-							</button>
+							</a>
 							<button class="govuk-button govuk-button--secondary" data-module="govuk-button">
 								Preview
 							</button>
