--- a/v2/find-organisation-results.html
+++ b/v2/find-organisation-results.html
@@ -85,9 +85,9 @@
 						</label>
 						<div class="pfs-search-item__wrapper govuk-input--width-30">
 							<input class="govuk-input govuk-input" id="search-main-873dc4df" name="q" title="Search" type="search"
-								value="">
+								value="Canterbury">
 							<div class="pfs-search__item">
-								<a href="../v2/funded-organisation-results.html" class="pfs-search__submit" type="submit">
+								<a href="../v2/find-organisation-results.html" class="pfs-search__submit" type="submit">
 									<svg class="pfs-search__icon" width="27" height="27" viewBox="0 0 27 27" fill="none"
 										xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
 										<circle cx="12.0161" cy="11.0161" r="8.51613" stroke="currentColor" stroke-width="3"></circle>
@@ -105,113 +105,17 @@
 			<div class="govuk-width-container">
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-full">
-						<h2 class="govuk-heading-l">List of organisations</h2>
-						<div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
-							<div class="govuk-accordion__section ">
-								<div class="govuk-accordion__section-header">
-									<h2 class="govuk-accordion__section-heading">
-										<span class="govuk-accordion__section-button" id="accordion-default-heading-1">
-											A
-										</span>
-									</h2>
-								</div>
-								<div id="accordion-default-content-1" class="govuk-accordion__section-content"
-									aria-labelledby="accordion-default-heading-1">
-									<ul class="govuk-list govuk-!-margin-bottom-0">
-										<li>
-											<a class="govuk-link" href="#">Adur and Worthing Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Adur District Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Allerdale Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Amber Valley Borough Council</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="govuk-accordion__section ">
-								<div class="govuk-accordion__section-header">
-									<h2 class="govuk-accordion__section-heading">
-										<span class="govuk-accordion__section-button" id="accordion-default-heading-2">
-											B
-										</span>
-									</h2>
-								</div>
-								<div id="accordion-default-content-2" class="govuk-accordion__section-content"
-									aria-labelledby="accordion-default-heading-2">
-									<ul class="govuk-list govuk-!-margin-bottom-0">
-										<li>
-											<a class="govuk-link" href="#">Babergh District Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Barnsley Metropolitan Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Barrow-in-Furness Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Basildon Borough Council</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="govuk-accordion__section ">
-								<div class="govuk-accordion__section-header">
-									<h2 class="govuk-accordion__section-heading">
-										<span class="govuk-accordion__section-button" id="accordion-default-heading-3">
-											C
-										</span>
-									</h2>
-								</div>
-								<div id="accordion-default-content-3" class="govuk-accordion__section-content"
-									aria-labelledby="accordion-default-heading-3">
-									<ul class="govuk-list govuk-!-margin-bottom-0">
-										<li>
-											<a class="govuk-link" href="#">Caerphilly County Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Calderdale Metropolitan Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Cambridge City Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Cambridgeshire County Council</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="govuk-accordion__section ">
-								<div class="govuk-accordion__section-header">
-									<h2 class="govuk-accordion__section-heading">
-										<span class="govuk-accordion__section-button" id="accordion-default-heading-4">
-											D
-										</span>
-									</h2>
-								</div>
-								<div id="accordion-default-content-4" class="govuk-accordion__section-content"
-									aria-labelledby="accordion-default-heading-4">
-									<ul class="govuk-list govuk-!-margin-bottom-0">
-										<li>
-											<a class="govuk-link" href="#">Dacorum Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Darlington Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Dartford Borough Council</a>
-										</li>
-										<li>
-											<a class="govuk-link" href="#">Daventry District Council</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
+						<h2 class="govuk-heading-l">Search Results</h2>
+						<p class="govuk-hint">2 search results</p>
+						<ul class="govuk-list govuk-!-margin-bottom-0">
+							<li>
+								<a class="govuk-link" href="../v2/find-organisation-city-council-summary.html">Canterbury City
+									Council</a>
+							</li>
+							<li>
+								<a class="govuk-link" href="../v2/find-organisation-city-council-summary.html">Chelmsford City Council</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</div>
