--- a/v2/index.html
+++ b/v2/index.html
@@ -90,7 +90,7 @@
                 <p class="govuk-body">Filter and download project data submitted by funded organisations</p>
               </div>
               <div class="govuk-grid-column-one-third-from-desktop">
-                <h2 class="govuk-heading-l govuk-!-font-weight-bold"><a href="../v2/funded-organisation.html"
+                <h2 class="govuk-heading-l govuk-!-font-weight-bold"><a href="../v2/find-organisation.html"
                     class="govuk-link govuk-!-font-weight-bold">Find an organisation</a></h2>
                 <p class="govuk-body">Find background information on funded organisations</p>
               </div>
