--- a/index.html
+++ b/index.html
@@ -54,11 +54,15 @@
 
   <div class="govuk-width-container">
     <main class="govuk-main-wrapper" id="main-content" role="main">
-      <h1 class="govuk-heading-xl">Alpha - M&E Design Exploration</h1>
+      <h1 class="govuk-heading-xl">Alpha - Prototypes</h1>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds-from-desktop">
-          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="./v1">Version 1</a></h2>
-          <h2 class="govuk-heading-l"><a class="govuk-link govuk-!-font-weight-bold" href="./v2">Version 2</a></h2>
+          <h2 class="govuk-heading-l">M&E Design Exploration</h2>
+          <p class="govuk-heading-m"><a class="govuk-link govuk-!-font-weight-bold" href="./v1">Version 1</a></p>
+          <p class="govuk-heading-m"><a class="govuk-link govuk-!-font-weight-bold" href="./v2">Version 2</a></p>
+            <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+          <h2 class="govuk-heading-l">Data Submission Design Exploration</h2>
+          <p class="govuk-heading-m"><a class="govuk-link govuk-!-font-weight-bold" href="./data-submission/v2">Version 2</a></p>
         </div>
       </div>
     </main>
