--- a/data-submission/v2/task-project-progress-review.html
+++ b/data-submission/v2/task-project-progress-review.html
@@ -54,17 +54,19 @@
 
   <div class="govuk-main-wrapper govuk-!-padding-top-0 govuk-!-padding-bottom-0 pfs-section-bg-alt">
     <div class="govuk-width-container">
-      <a href="../../data-submission/v2/task-breakdown.html" class="govuk-back-link">Back</a>
+      <a href="../../data-submission/v2/task-project-progress.html" class="govuk-back-link">Back</a>
     </div>
   </div>
 
   <main id="main-content" role="main">
     <section class="govuk-main-wrapper pfs-section-bg-alt">
       <div class="govuk-width-container">
-        <h1 class="govuk-heading-xl">Review your project details</h1>
+        <span class="govuk-caption-xl">Project progress</span>
+        <h1 class="govuk-heading-xl">Check your answers</h1>
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
-            <p class="govuk-body-m">Before you start, check your project details are still correct.</p>
+            <p class="govuk-body-m">Here's a summary of your answers. Please make sure you've answered each question
+              fully before submitting your reporting form.</p>
           </div>
         </div>
       </div>
@@ -74,52 +76,100 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
             <div class="govuk-grid-row">
-              <div class="govuk-grid-column-two-thirds">
+              <div class="govuk-grid-column-three-quarters">
                 <dl class="govuk-summary-list">
-                  <div class="govuk-summary-list__row govuk-summary-list__row--no-actions">
-                    <dt class="govuk-summary-list__key">
-                      Project reference number
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                      9070329
-                    </dd>
-                  </div>
                   <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                      Project name
+                      How is your project progressing against your original project monitoring update?
                     </dt>
                     <dd class="govuk-summary-list__value">
-                      Bakely Community Project
-                    </dd>
-                  </div>
-                  <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                      Your organisation name
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                      Bakely Centre Council
-                    </dd>
-                  </div>
-                  <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                      Project location
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                      BS3 4AB
+                      It is anticipated that additional time is needed to develop the detailed design which is likely to
+                      delay commencement of works on site.
                     </dd>
                     <dd class="govuk-summary-list__actions">
                       <a class="govuk-link" href="#">
-                        Update<span class="govuk-visually-hidden"> project location</span>
+                        Update<span class="govuk-visually-hidden"> answer</span>
+                      </a>
+                    </dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                      Tell us how your project has progressed in Q2.
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                      We spoke to local residents about the plans to include a community garden and received positive
+                      feedback.
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                      <a class="govuk-link" href="#">
+                        Update<span class="govuk-visually-hidden"> answer</span>
+                      </a>
+                    </dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                      What challenges do you expect to face in the next 6 to 12 months?
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                      Building works are likely to start 8 weeks after initially scheduled which may delay overall
+                      project
+                      timeframes..
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                      <a class="govuk-link" href="#">
+                        Update<span class="govuk-visually-hidden"> answer</span>
+                      </a>
+                    </dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                      Tell us about any milestones you expect to reach in Q3 (October - December).
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                      We will finalise the detailed design plans and start building works on site.
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                      <a class="govuk-link" href="#">
+                        Update<span class="govuk-visually-hidden"> answer</span>
+                      </a>
+                    </dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                      Do you require
+                      additional support
+                      from the Levelling Up
+                      Fund team?
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                      Can you provide a photographer to take photos of the building work for the local newspaper?
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                      <a class="govuk-link" href="#">
+                        Update<span class="govuk-visually-hidden"> answer</span>
+                      </a>
+                    </dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                      Upload supporting documents
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                      media.png
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                      <a class="govuk-link" href="#">
+                        Update<span class="govuk-visually-hidden"> answer</span>
                       </a>
                     </dd>
                   </div>
                 </dl>
-
                 <div class="govuk-button-group govuk-!-margin-bottom-0">
-                  <button class="govuk-button" data-module="govuk-button">
+                  <a href="../../data-submission/v2/task-project-progress-review.html" type="submit"
+                    class="govuk-button" data-module="govuk-button">
                     Save and continue
-                  </button>
-                  <a href="../../data-submission/v2/task-breakdown.html" type="submit"
+                  </a>
+                  <a href="../../data-submission/v2/task-project-progress.html" type="submit"
                     class="govuk-button govuk-button--secondary" data-module="govuk-button">
                     Back
                   </a>
@@ -137,7 +187,7 @@
       <div class="govuk-footer__meta">
         <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
           <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo"
-            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
+            xmlns="http://www.w3.org/5000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
             <path fill="currentColor"
               d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145" />
           </svg>
