added flow for project outputs anf funding profile

--- a/data-submission/v2/task-breakdown.html
+++ b/data-submission/v2/task-breakdown.html
@@ -128,7 +128,7 @@
                   <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
                       <td class="govuk-table__cell govuk-!-width-two-thirds">
-                        <a class="govuk-link govuk-!-font-size-19" href="#">
+                        <a class="govuk-link govuk-!-font-size-19" href="../../data-submission/v2/task-funding-profile.html">
                           Funding profile</span>
                         </a>
                       </td>
@@ -159,7 +159,7 @@
                   <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
                       <td class="govuk-table__cell govuk-!-width-two-thirds">
-                        <a class="govuk-link govuk-!-font-size-19" href="#">
+                        <a class="govuk-link govuk-!-font-size-19" href="../../data-submission/v2/task-project-outputs.html">
                           Project outputs</span>
                         </a>
                       </td>
