--- a/data-submission/v2/task-funding-profile-review.html
+++ b/data-submission/v2/task-funding-profile-review.html
@@ -54,14 +54,14 @@
 
   <div class="govuk-main-wrapper govuk-!-padding-top-0 govuk-!-padding-bottom-0 pfs-section-bg-alt">
     <div class="govuk-width-container">
-      <a href="../../data-submission/v2/task-project-progress.html" class="govuk-back-link">Back</a>
+      <a href="../../data-submission/v2/task-funding-profile.html" class="govuk-back-link">Back</a>
     </div>
   </div>
 
   <main id="main-content" role="main">
     <section class="govuk-main-wrapper pfs-section-bg-alt">
       <div class="govuk-width-container">
-        <span class="govuk-caption-xl">Project progress</span>
+        <span class="govuk-caption-xl">Funding profile: project costs 2021-2025</span>
         <h1 class="govuk-heading-xl">Check your answers</h1>
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
@@ -80,78 +80,10 @@
                 <dl class="govuk-summary-list">
                   <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                      How is your project progressing against your original project monitoring update?
+                      Upload spreadsheet
                     </dt>
                     <dd class="govuk-summary-list__value">
-                      It is anticipated that additional time is needed to develop the detailed design which is likely to
-                      delay commencement of works on site.
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="#">
-                        Update<span class="govuk-visually-hidden"> answer</span>
-                      </a>
-                    </dd>
-                  </div>
-                  <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                      Tell us how your project has progressed in Q2.
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                      We spoke to local residents about the plans to include a community garden and received positive
-                      feedback.
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="#">
-                        Update<span class="govuk-visually-hidden"> answer</span>
-                      </a>
-                    </dd>
-                  </div>
-                  <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                      What challenges do you expect to face in the next 6 to 12 months?
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                      Building works are likely to start 8 weeks after initially scheduled which may delay overall
-                      project timeframes.
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="#">
-                        Update<span class="govuk-visually-hidden"> answer</span>
-                      </a>
-                    </dd>
-                  </div>
-                  <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                      Tell us about any milestones you expect to reach in Q3 (October - December).
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                      We will finalise the detailed design plans and start building works on site.
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="#">
-                        Update<span class="govuk-visually-hidden"> answer</span>
-                      </a>
-                    </dd>
-                  </div>
-                  <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                      Do you require additional support from the Levelling Up Fund team?
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                      Can you provide a photographer to take photos of the building work for the local newspaper?
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="#">
-                        Update<span class="govuk-visually-hidden"> answer</span>
-                      </a>
-                    </dd>
-                  </div>
-                  <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                      Upload supporting documents
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                      media.png
+                      spreadsheet.csv
                     </dd>
                     <dd class="govuk-summary-list__actions">
                       <a class="govuk-link" href="#">
@@ -165,7 +97,7 @@
                     class="govuk-button" data-module="govuk-button">
                     Save and continue
                   </a>
-                  <a href="../../data-submission/v2/task-project-progress.html" type="submit"
+                  <a href="../../data-submission/v2/task-funding-profile.html" type="submit"
                     class="govuk-button govuk-button--secondary" data-module="govuk-button">
                     Back
                   </a>
