removed empty accordian option and removed gray banner from sub-pages

--- a/data-submission/v2/index.html
+++ b/data-submission/v2/index.html
@@ -177,7 +177,7 @@
                   </div>
                 </div>
               </div>
-              <div class="govuk-accordion__section">
+              <!-- <div class="govuk-accordion__section">
                 <div class="govuk-accordion__section-header">
                   <h2 class="govuk-accordion__section-heading">
                     <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
@@ -189,7 +189,7 @@
                   aria-labelledby="accordion-default-heading-2">
                   <p class="govuk-body-m">Towns Fund</p>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-one-half">
