--- a/data-submission/v2/task-funding-profile-review.html
+++ b/data-submission/v2/task-funding-profile-review.html
@@ -63,16 +63,12 @@
       <div class="govuk-width-container">
         <span class="govuk-caption-xl">Funding profile: project costs 2021-2025</span>
         <h1 class="govuk-heading-xl">Check your answers</h1>
-        <div class="govuk-grid-row">
+        <div class="govuk-grid-row govuk-!-margin-bottom-6">
           <div class="govuk-grid-column-two-thirds">
             <p class="govuk-body-m">Here's a summary of your answers. Please make sure you've answered each question
               fully before submitting your reporting form.</p>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="govuk-main-wrapper">
-      <div class="govuk-width-container">
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
             <div class="govuk-grid-row">
