--- a/data-submission/v2/task-funding-profile.html
+++ b/data-submission/v2/task-funding-profile.html
@@ -62,15 +62,11 @@
     <section class="govuk-main-wrapper pfs-section-bg-alt">
       <div class="govuk-width-container">
         <h1 class="govuk-heading-xl">Funding profile: project costs 2021-2025</h1>
-        <div class="govuk-grid-row">
+        <div class="govuk-grid-row govuk-!-margin-bottom-6">
           <div class="govuk-grid-column-two-thirds">
             <p class="govuk-body-m">We need to keep track of the total cost of your project to date. Tell us how you're spending your allocated LUF funding.</p>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="govuk-main-wrapper">
-      <div class="govuk-width-container">
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
             <div class="govuk-grid-row">
