--- a/data-submission/v2/task-project-admin.html
+++ b/data-submission/v2/task-project-admin.html
@@ -52,25 +52,21 @@
     </div>
   </header>
 
-  <div class="govuk-main-wrapper govuk-!-padding-top-0 govuk-!-padding-bottom-0 pfs-section-bg-alt">
+  <div class="govuk-main-wrapper govuk-!-padding-top-0 govuk-!-padding-bottom-0">
     <div class="govuk-width-container">
       <a href="../../data-submission/v2/task-breakdown.html" class="govuk-back-link">Back</a>
     </div>
   </div>
 
   <main id="main-content" role="main">
-    <section class="govuk-main-wrapper pfs-section-bg-alt">
+    <section class="govuk-main-wrapper">
       <div class="govuk-width-container">
         <h1 class="govuk-heading-xl">Review your project details</h1>
-        <div class="govuk-grid-row">
+        <div class="govuk-grid-row govuk-!-margin-bottom-6">
           <div class="govuk-grid-column-two-thirds">
             <p class="govuk-body-m">Before you start, check your project details are still correct.</p>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="govuk-main-wrapper">
-      <div class="govuk-width-container">
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
             <div class="govuk-grid-row">
