--- a/data-submission/v2/task-project-outputs.html
+++ b/data-submission/v2/task-project-outputs.html
@@ -62,15 +62,11 @@
     <section class="govuk-main-wrapper pfs-section-bg-alt">
       <div class="govuk-width-container">
         <h1 class="govuk-heading-xl">Project outputs 2021</h1>
-        <div class="govuk-grid-row">
+        <div class="govuk-grid-row govuk-!-margin-bottom-6">
           <div class="govuk-grid-column-two-thirds">
             <p class="govuk-body-m">Tell us how you're progressing against the output indicators you selected in your project monitoring update.</p>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="govuk-main-wrapper">
-      <div class="govuk-width-container">
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
             <div class="govuk-grid-row">
