--- a/data-submission/v2/task-project-progress.html
+++ b/data-submission/v2/task-project-progress.html
@@ -62,15 +62,11 @@
     <section class="govuk-main-wrapper pfs-section-bg-alt">
       <div class="govuk-width-container">
         <h1 class="govuk-heading-xl">Project progress</h1>
-        <div class="govuk-grid-row">
+        <div class="govuk-grid-row govuk-!-margin-bottom-6">
           <div class="govuk-grid-column-two-thirds">
             <p class="govuk-body-m">Tell us how your project has progressed between July - September 2022 (Q2).</p>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="govuk-main-wrapper">
-      <div class="govuk-width-container">
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
             <div class="govuk-grid-row">
