added placholder text to outputs page

--- a/data-submission/v2/task-project-outputs-review.html
+++ b/data-submission/v2/task-project-outputs-review.html
@@ -92,8 +92,9 @@
                       Tell us about any limitations to how this data was collected.
                     </dt>
                     <dd class="govuk-summary-list__value">
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis vitae repudiandae totam,
-                      debitis sunt esse? Consectetur.
+                      In the final four weeks of the quarter, we had several staff absences due to sickness. This meant
+                      we fell behind on our build target. We will increase number of workers in the next quarter to get
+                      back on track with the build.
                     </dd>
                     <dd class="govuk-summary-list__actions">
                       <a class="govuk-link" href="#">
