--- a/data-submission/v2/index.html
+++ b/data-submission/v2/index.html
@@ -58,7 +58,7 @@
         <h1 class="govuk-heading-xl pfs-app-masthead__text">Manage your reporting forms</h1>
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
-            <p class="govuk-body-m pfs-app-masthead__text"><strong>Date:</strong> 1st July 2022</p>
+            <p class="govuk-body-m pfs-app-masthead__text"><strong>Date:</strong> 1 July 2022</p>
           </div>
         </div>
         <form action="#" method="post" novalidate>
@@ -70,8 +70,7 @@
               <input class="govuk-input govuk-input" id="search-main-873dc4df" name="q" title="Search" type="search"
                 value="">
               <div class="pfs-search__item">
-                <a href="#" class="pfs-search__submit pfs-search__submit--inverted"
-                  type="submit">
+                <a href="#" class="pfs-search__submit pfs-search__submit--inverted" type="submit">
                   <svg class="pfs-search__icon" width="27" height="27" viewBox="0 0 27 27" fill="none"
                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
                     <circle cx="12.0161" cy="11.0161" r="8.51613" stroke="currentColor" stroke-width="3"></circle>
@@ -103,7 +102,7 @@
                   aria-labelledby="accordion-default-heading-1">
                   <div class="govuk-grid-row">
                     <div class="govuk-grid-column-three-quarters">
-                      <p class="govuk-body-m"><strong>Next deadline:</strong> 31st October 2022 (Q2)</p>
+                      <p class="govuk-body-m"><strong>Next deadline:</strong> 31 October 2022 (Q2)</p>
                       <div class="govuk-form-group govuk-!-margin-bottom-8">
                         <fieldset class="govuk-fieldset" role="group">
                           <div class="govuk-date-input__item">
