--- a/data-submission/v2/task-breakdown.html
+++ b/data-submission/v2/task-breakdown.html
@@ -69,8 +69,7 @@
               progressing and to assess if you need additional support.</p>
             <p class="govuk-body-m">The information you provide can be updated as many times as necessary until you
               submit the completed reporting form.</p>
-            <p class="govuk-body-m">Your Q2 reporting form must be submitted by <strong>5pm on Monday 31 October
-                2022</strong>.</p>
+            <p class="govuk-body-m">Your Q2 reporting form must be submitted by <strong>5pm on Monday 31 October 2022</strong>.</p>
           </div>
         </div>
       </div>
