--- a/data-submission/v2/task-project-outputs-review.html
+++ b/data-submission/v2/task-project-outputs-review.html
@@ -89,7 +89,7 @@
                   </div>
                   <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                      Tell us about any limitations to how this data was collected.
+                      Tell us about any challenges you faced in collecting this data.
                     </dt>
                     <dd class="govuk-summary-list__value">
                       In the final four weeks of the quarter, we had several staff absences due to sickness. This meant
