--- a/data-submission/v2/task-project-outputs.html
+++ b/data-submission/v2/task-project-outputs.html
@@ -84,7 +84,7 @@
                   <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="500">
                     <div class="govuk-form-group">
                       <label class="govuk-label govuk-label--m" for="project-limitations">
-                        Tell us about any limitations to how this data was collected.
+                        Tell us about any challenges you faced in collecting this data.
                       </label>
                       <div id="project-limitations-hint" class="govuk-hint">
                         Please provide as much detail as you can e.g. limitations to the software used, capacity issues or changes to collection method.
