--- a/data-submission/v2/task-project-progress.html
+++ b/data-submission/v2/task-project-progress.html
@@ -78,7 +78,7 @@
                         How is your project progressing against your original project monitoring update?
                       </label>
                       <div id="project-progress-hint" class="govuk-hint">
-                        This may include changes to your finance, delivery plan, risks outputs or outcomes.
+                        This may include changes to your finance, delivery plan, risks, outputs or outcomes.
                       </div>
                       <textarea class="govuk-textarea govuk-js-character-count" id="project-progress"
                         name="project-progress" rows="5"
@@ -126,7 +126,7 @@
                         Tell us about any milestones you expect to reach in Q3 (October - December)
                       </label>
                       <div id="project-milestones-hint" class="govuk-hint">
-                        Please include timeframes of key activities e.g. first spade in the ground. completed designs,
+                        Please include timeframes of key activities e.g. first spade in the ground, completed designs,
                         building fit out.
                       </div>
                       <textarea class="govuk-textarea govuk-js-character-count" id="project-milestones"
