--- a/data-submission/v2/task-project-progress-review.html
+++ b/data-submission/v2/task-project-progress-review.html
@@ -90,7 +90,7 @@
                   </div>
                   <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                      Tell us how your project has progressed in Q2.
+                      Tell us how your project has progressed in Q2
                     </dt>
                     <dd class="govuk-summary-list__value">
                       We spoke to local residents about the plans to include a community garden and received positive
