--- a/data-submission/v2/task-project-progress.html
+++ b/data-submission/v2/task-project-progress.html
@@ -91,7 +91,7 @@
                   <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="500">
                     <div class="govuk-form-group">
                       <label class="govuk-label govuk-label--m" for="project-progress-q2">
-                        Tell us how your project has progressed in Q2?
+                        Tell us how your project has progressed in Q2
                       </label>
                       <div id="project-progress-q2-hint" class="govuk-hint">
                         This may include any project activities or good news stories e.g media coverage on your project.
