internal tool content fix

--- a/v2/download-data.html
+++ b/v2/download-data.html
@@ -299,9 +299,15 @@
 						</div>
 						<div class="govuk-form-group">
 							<label class="govuk-label govuk-date-input__label govuk-!-font-weight-bold" for="timeframe-year">
-								Fund Recipient(s):
+								Area(s):
 							</label>
 							<strong class="govuk-tag govuk-tag--blue">SOUTH EAST</strong>
+						</div>
+						<div class="govuk-form-group">
+							<label class="govuk-label govuk-date-input__label govuk-!-font-weight-bold" for="timeframe-year">
+								Fund Recipient(s):
+							</label>
+							<strong class="govuk-tag govuk-tag--blue">SOUTH EAST COUNCIL</strong>
 						</div>
 						<div class="govuk-form-group">
 							<label class="govuk-label govuk-date-input__label govuk-!-font-weight-bold" for="timeframe-year">
